@@ -67,13 +67,13 @@
 
 #filterslist tbody tr.filtermoveup td
 {
-  border-top: 2px dotted #555;
+  border-top: 2px dotted #555 !important;
   padding-top: 5px;
 }
 
 #filterslist tbody tr.filtermovedown td
 {
-  border-bottom: 2px dotted #555;
+  border-bottom: 2px dotted #555 !important;
   padding-bottom: 4px;
 }
 
